
[TestGenerate/without_createdAt,_updatedAt_(function) - 1]
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func NewFooFromBar(src *BarModel) *foo.FooModel {
    return &foo.FooModel{
        Age:  src.Age,
        Id:   src.Id,
        Name: src.Name,
    }
}

---

[TestGenerate/without_createdAt,_updatedAt_(method) - 1]
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func (src *BarModel) ToFoo() *foo.FooModel {
    return &foo.FooModel{
        Age:  src.Age,
        Id:   src.Id,
        Name: src.Name,
    }
}

---

[TestGenerate/without_createdAt,_updatedAt_(method,_no_ref) - 1]
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func (src *BarModel) ToFoo() foo.FooModel {
    return foo.FooModel{
        Age:  src.Age,
        Id:   src.Id,
        Name: src.Name,
    }
}

---
